[gd_scene load_steps=5 format=3 uid="uid://bcabalm40spo5"]

[ext_resource type="Script" uid="uid://dqbtvw5m2b31u" path="res://scenes/GUI/chest/gui_chest_main.gd" id="1_4jgan"]
[ext_resource type="PackedScene" uid="uid://beuy7po6dtwkn" path="res://scenes/GUI/utils/gui_overlay_background.tscn" id="1_4lroq"]
[ext_resource type="PackedScene" uid="uid://b5rxndhlrby0t" path="res://scenes/GUI/utils/scene_margin_container.tscn" id="2_s7l4h"]
[ext_resource type="PackedScene" uid="uid://buvmk7slt2yq6" path="res://scenes/GUI/chest/gui_chest_reward_container.tscn" id="3_whn2w"]

[node name="GUIChestMain" type="CanvasLayer"]
script = ExtResource("1_4jgan")

[node name="GUIOverlayBackground" parent="." instance=ExtResource("1_4lroq")]

[node name="MainMarginContainer" parent="." instance=ExtResource("2_s7l4h")]

[node name="GUIChestRewardContainer" parent="MainMarginContainer" instance=ExtResource("3_whn2w")]
unique_name_in_owner = true
layout_mode = 2
